[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/SideQuestConnection.gd" type="Script" id=1]
[ext_resource path="res://InfoBoxOpaque.tscn" type="PackedScene" id=3]
[ext_resource path="res://ToggleSwitch.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sidequest_logo.jpg" type="Texture" id=5]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 4, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_texture = ExtResource( 5 )

[node name="SideQuestConnection" type="Spatial"]
script = ExtResource( 1 )

[node name="SideQuestPanel" parent="." instance=ExtResource( 3 )]
default_text = "VRHealth Connection\\n\\nTouch all buttons to connect"

[node name="ConnectSwitch" parent="SideQuestPanel" instance=ExtResource( 4 )]
transform = Transform( 2.5, -3.78653e-27, -1.65515e-34, 0, -1.09278e-07, 2.5, -3.78653e-27, -2.5, -1.09278e-07, -0.678915, 0.0510842, 0.860583 )
ontext = "TOUCH ALL"
offtext = ""
two_way = false

[node name="ConnectSwitch2" parent="SideQuestPanel" instance=ExtResource( 4 )]
transform = Transform( 2.5, -3.78653e-27, -1.65515e-34, 0, -1.09278e-07, 2.5, -3.78653e-27, -2.5, -1.09278e-07, -0.0184464, 0.0510842, 0.860583 )
ontext = "SWITCHES"
offtext = ""
two_way = false

[node name="ConnectSwitch3" parent="SideQuestPanel" instance=ExtResource( 4 )]
transform = Transform( 2.5, -3.78653e-27, -1.65515e-34, 0, -1.09278e-07, 2.5, -3.78653e-27, -2.5, -1.09278e-07, 0.727495, 0.0510842, 0.860583 )
ontext = "TO CONNECT"
offtext = ""
two_way = false

[node name="SideQuestLogo" type="MeshInstance" parent="."]
transform = Transform( 0.55, 0, 0, 0, 0.7, 0, 0, 0, 0.55, 0, 0, -0.942613 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[connection signal="toggled" from="SideQuestPanel/ConnectSwitch" to="." method="_on_ConnectSwitch_toggled"]
[connection signal="toggled" from="SideQuestPanel/ConnectSwitch2" to="." method="_on_ConnectSwitch2_toggled"]
[connection signal="toggled" from="SideQuestPanel/ConnectSwitch3" to="." method="_on_ConnectSwitch3_toggled"]
